--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start --port 3000 --hostname 0.0.0.0",
     "lint": "next lint"
   },
+  "engines": {
+  "node": ">=18.0.0"
+},
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -32,4 +35,5 @@
     "postcss": "^8",
     "typescript": "^5.3.3"
   }
+  
 }
